<resources>
    <string name="app_name">ProdSwing</string>

    <string name="text_username">Username or Email</string>
    <string name="password_check">password cannot be less than 8 characters</string>
    <string name="text_password">Password</string>
    <string name="text_forgotPassword">Forgot Password?</string>
    <string name="SignInButton">Sign In</string>
    <string name="text_create_an_account">Create an Account</string>
    <string name="SignUp"><u>Sign Up</u></string>
    <string name="text_confirm_password">Confirm Password</string>
    <string name="create_an_account">Create an Account</string>
    <string name="text_fullname">Full Name</string>
    <string name="text_create_account">Create Account</string>
    <string name="login"><u>Login</u></string>
    <string name="text_already_have_an_account">I Already Have an Account</string>
    <string name="SignOut">Logout</string>
    <string name="product_name">productName</string>
    <string name="product_description">ProductDescriptions</string>
    <string name="product_category">ProductCategory</string>
    <string name="product_price">ProductPrice</string>
    <string name="text_label_account">Account\n</string>
    <string name="text_label_sentimen">Sentimen</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_bottom">BottomActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>